--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         run: npx semantic-release
   docs:
     name: Deploy Docs
-    needs: build
+    needs: release
     runs-on: ubuntu-latest
     permissions:
       contents: write # to be able to publish to GitHub Pages
