fix: rename due to npm 403

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "big.es",
+  "name": "big.esm",
   "version": "1.0.0",
   "description": "A small, fast JavaScript library for arbitrary-precision decimal arithmetic.",
   "type": "module",
@@ -17,9 +17,9 @@
     "semantic-release": "semantic-release",
     "prepare": "is-ci || husky install"
   },
-  "main": "dist/big.es.umd.cjs",
-  "module": "dist/big.es.js",
-  "types": "dist/big.es.ts",
+  "main": "dist/big.esm.umd.cjs",
+  "module": "dist/big.esm.js",
+  "types": "dist/big.esm.ts",
   "files": [
     "dist/*",
     "package.json",
@@ -29,7 +29,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dschewchenko/big.es.git"
+    "url": "https://github.com/dschewchenko/big.esm.git"
   },
   "keywords": [
     "big",
@@ -42,9 +42,9 @@
   "author": "dschewchenko",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dschewchenko/big.es/issues"
+    "url": "https://github.com/dschewchenko/big.esm/issues"
   },
-  "homepage": "https://github.com/dschewchenko/big.es#readme",
+  "homepage": "https://github.com/dschewchenko/big.esm#readme",
   "engines": {
     "node": ">=16"
   },
