--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docs": "typedoc --out docs src/index.ts",
     "lint": "eslint --ext .ts,.js,.json ./src",
     "lint:fix": "eslint --fix --ext .ts,.js,.json ./src",
+    "benchmark": "node ./benchmark.js",
     "semantic-release": "semantic-release",
     "prepare": "is-ci || husky install"
   },
@@ -49,6 +50,7 @@
     "node": ">=16"
   },
   "devDependencies": {
+    "big.js": "^6.2.1",
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
     "@semantic-release/changelog": "^6.0.3",
