--- a/.eslintrc
+++ b/.eslintrc
@@ -8,12 +8,17 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
   "env": {
     "browser": true,
     "node": true
   },
   "rules": {
     "eol-last": ["error", "always"],
-    "no-trailing-spaces": "error"
+    "no-trailing-spaces": "error",
+    "prefer-const": ["error", { "destructuring": "all" }]
   }
 }
