--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "coverage": "vitest run --coverage",
-    "docs": "typedoc --out docs src/index.ts",
+    "docs": "typedoc --out docs",
     "lint": "eslint --ext .ts,.js,.json ./src",
     "lint:fix": "eslint --fix --ext .ts,.js,.json ./src",
-    "benchmark": "node ./benchmark.js",
+    "benchmark": "node --expose-gc ./benchmark.js",
     "semantic-release": "semantic-release",
     "prepare": "is-ci || husky install"
   },
@@ -50,7 +50,6 @@
     "node": ">=16"
   },
   "devDependencies": {
-    "big.js": "^6.2.1",
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
     "@semantic-release/changelog": "^6.0.3",
@@ -61,6 +60,7 @@
     "@typescript-eslint/parser": "^5.59.5",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
+    "big.js": "^6.2.1",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
