--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,12 @@
 name: Test
+
 on:
   push:
-    pull_requests:
-      branches:
-        - main
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
@@ -11,35 +14,38 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      # Required to checkout the code
       contents: read
-      # Required to put a comment into the pull-request
       pull-requests: write
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: false
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: "lts/*"
+          bun-version: "1.3.1"
+
       - name: Use cache
         uses: actions/cache@v3
         with:
           path: |
+            ~/.bun/install/cache
             node_modules
             */*/node_modules
-          key: ${{ hashFiles('**/package-lock.json') }}
+          key: bun-${{ runner.os }}-${{ hashFiles('bun.lock') }}
+          restore-keys: |
+            bun-${{ runner.os }}-
 
       - name: Install dependencies
-        run: npm clean-install
-      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
-        run: npm audit signatures
-      - name: 'Test'
-        run: npm run coverage
-      - name: 'Report Coverage'
-        if: always() # Also generate the report if tests are failing TODO: make it work
+        run: bun install --frozen-lockfile
+
+      - name: Test
+        run: bun run coverage
+
+      - name: Report Coverage
+        if: always()
         uses: davelosert/vitest-coverage-report-action@v1
