--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "A small, fast JavaScript library for arbitrary-precision decimal arithmetic.",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "coverage": "vitest run --coverage",
-    "docs": "typedoc --out docs",
-    "lint": "eslint --ext .ts,.js,.json ./src",
-    "lint:fix": "eslint --fix --ext .ts,.js,.json ./src",
-    "benchmark": "node --expose-gc ./benchmark.js",
-    "semantic-release": "semantic-release",
-    "prepare": "is-ci || husky install"
+    "dev": "bunx vite",
+    "build": "bunx tsc && bunx vite build",
+    "preview": "bunx vite preview",
+    "test": "bunx vitest",
+    "test:ui": "bunx vitest --ui",
+    "test:run": "bunx vitest run",
+    "coverage": "bunx vitest run --coverage",
+    "docs": "bunx typedoc --out docs",
+    "lint": "bunx biome check",
+    "lint:fix": "bun run lint -- --write",
+    "benchmark": "bun benchmark.js",
+    "semantic-release": "bunx semantic-release",
+    "prepare": "bunx is-ci || bunx husky"
   },
   "main": "dist/big.esm.umd.cjs",
   "module": "dist/big.esm.js",
@@ -46,37 +46,32 @@
     "url": "https://github.com/dschewchenko/big.esm/issues"
   },
   "homepage": "https://github.com/dschewchenko/big.esm#readme",
+  "packageManager": "bun@1.3.1",
   "engines": {
+    "bun": ">=1.0.0",
     "node": ">=16"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
+    "@biomejs/biome": "2.3.0",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^18.15.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "@vitest/coverage-c8": "^0.31.0",
-    "@vitest/ui": "^0.31.0",
-    "big.js": "^6.2.1",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
-    "is-ci": "^3.0.1",
-    "prettier": "^2.8.8",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "semantic-release": "^21.0.5",
-    "ts-jest": "^29.1.0",
-    "typedoc": "^0.24.8",
-    "typedoc-plugin-mdn-links": "^3.0.3",
-    "typedoc-plugin-merge-modules": "^5.0.1",
+    "@types/node": "^24.9.1",
+    "@vitest/ui": "^4.0.3",
+    "@vitest/coverage-v8": "^4.0.3",
+    "big.js": "^7.0.1",
+    "husky": "^9.1.7",
+    "is-ci": "^4.1.0",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "semantic-release": "^25.0.1",
+    "typedoc": "^0.28.14",
+    "typedoc-plugin-mdn-links": "^5.0.10",
+    "typedoc-plugin-merge-modules": "^7.0.0",
     "typedoc-plugin-pages": "^1.1.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.9",
-    "vite-plugin-dts": "^2.3.0",
-    "vitest": "^0.31.0"
+    "typescript": "^5.9.3",
+    "vite": "^7.1.12",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^4.0.3"
   }
 }
