--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,9 +43,43 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Download base coverage summary
+        if: github.event_name == 'pull_request'
+        id: download_base
+        uses: dawidd6/action-download-artifact@v3
+        with:
+          workflow: test.yml
+          branch: ${{ github.event.repository.default_branch }}
+          name: coverage-summary
+          path: coverage-base
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          if_no_artifact_found: warn
+
+      - name: Check base coverage summary
+        if: github.event_name == 'pull_request'
+        id: coverage_base
+        run: |
+          if [ -f coverage-base/coverage-summary.json ]; then
+            echo "path=coverage-base/coverage-summary.json" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Test
         run: bun run coverage
 
+      - name: Upload coverage summary artifact
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-summary
+          path: coverage/coverage-summary.json
+          retention-days: 7
+
+      - name: Report Coverage (with diff)
+        if: always() && steps.coverage_base.outputs.path != ''
+        uses: davelosert/vitest-coverage-report-action@v1
+        with:
+          json-summary-compare-path: ${{ steps.coverage_base.outputs.path }}
+
       - name: Report Coverage
-        if: always()
+        if: always() && steps.coverage_base.outputs.path == ''
         uses: davelosert/vitest-coverage-report-action@v1
