feat!: big.esm v2 rewrite core
- Speed (ops): 26.26x faster vs big.js (median; min 2.17x, max 154.43x); 2.26x faster than v1 (mutable mode; 11.63x median vs big.js)
- Speed (pipeBig): 29.8x faster vs big.js (median; min 2.84x, max 148.27x)
- Size (full): 5.25 KB min / 1.87 KB br (1.30x / 1.46x smaller than big.js; v1: 4.11 KB / 1.58 KB)
- Size (pipe-only): 4.40 KB min / 1.62 KB br (1.55x / 1.68x smaller than big.js)

BREAKING CHANGE: operations + alignScale now mutate inputs. Сlone with cloneBig for immutability.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "docs": "bunx typedoc --out docs",
     "lint": "bunx biome check",
     "lint:fix": "bun run lint -- --write",
-    "benchmark": "bun benchmark.js",
+    "benchmark": "bun benchmarks/benchmark.js",
+    "benchmark:weight": "bun benchmarks/size-compare.js",
     "semantic-release": "bunx semantic-release",
     "prepare": "bunx is-ci || bunx husky"
   },
