--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ docs
 *.local
 stats.*
 
+# Bench artifacts (generated)
+benchmarks/artifacts/
+benchmarks/results/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
